# showrss-to-magnet

./: Cargo.toml  Dockerfile
src/: main.rs
